[package]
name = "yew-linkify"
version = "0.0.1"
edition = "2021"
description = "A yew component for automatically linkifying your text"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
linkify = "0.9.0"
